<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HouseBoss</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="house_boss">House Boss</string>
    <string name="please_enter_your_zip_code_">Please enter your zip code:</string>
    <string name="zip_code">Zip Code</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="setup">Setup</string>
    <string name="no_reminders_saved_">No reminders saved.</string>
    <string name="add_new">Add New</string>
    <string name="cancel">Cancel</string>
    <string name="size_brand_">Size? Brand?</string>
    <string name="what_do_you_need_to_do_">What do you need to do?</string>
    <string name="add_new_reminder">Add New Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="one_time">One Time</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="interior_or_exterior_">Interior or Exterior?</string>
    <string name="slash">/</string>
    <string name="icon">Icon</string>
    <string name="colon">:</string>
    <string name="settings">Settings</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_reminder">Edit Reminder</string>

</resources>
